--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="logoweb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="theme-color" content="#000000" />
